Fixed view on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -2,11 +2,16 @@
 body {
     padding-bottom: 20px;
     padding-top: 20px;
-
 }
 .container {
     border: 0px solid #000000;
 }
+
+.row {
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
 /* Making header bottom border */
 .header {
     padding-bottom: 20px;
@@ -77,7 +82,8 @@ body {
     float:right;
 }
 .footer {
-    padding-top: 19px;
+    margin-top: 20px;
+    padding-top: 20px
     color: #777;
     border-top: 1px solid #e5e5e5;
 
@@ -98,5 +104,27 @@ body {
     /* Remove the bottom border on the jumbotron for visual effect */
     .jumbotron {
         border-bottom: 0;
+    }
+}
+
+
+/* Responsive: Portrait mobiles */
+@media screen and (max-width: 768px) {
+    body {
+        padding-top: 5px;
+        padding-bottom: 5px;
+    }
+    .feature {
+        text-align: center;
+
+    }
+    .row {
+        padding-left: 0px;
+        padding-right: 0px;
+    }
+    .footer {
+        margin-top: 5px;
+        padding-top: 5px;
+        text-align: center;
     }
 }
